# django_quad_function

./: .gitignore  README.md  manage.py  pyproject.toml  requirements-dev.txt
function/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
function/migrations/: 0001_initial.py  0002_quadfunction_private.py  0003_alter_quadfunction_private.py  0004_auto_20230419_1755.py  0005_auto_20230601_1112.py  0006_alter_quadfunction_range_plot.py  0007_auto_20230601_1157.py  0008_auto_20230601_1158.py  0009_auto_20230601_1159.py  0010_auto_20230609_1339.py  0011_alter_quadfunction_range_plot.py  0012_alter_quadfunction_date.py
templates/: function.html  history.html  index.html  main.html  values.html
templates/registration/: login.html  register.html
webfunction/: asgi.py  settings.py  urls.py  wsgi.py
